force-app/main/default/objects/dupcheck__dc3ObjectMeta__c/dupcheck__dc3ObjectMeta__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Object Meta</label>
    <nameField>
        <displayFormat>ObjectMeta{0000000000}</displayFormat>
        <label>ObjectMetaIdentifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Object Metas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>