force-app/main/default/objects/dupcheck__dc3ObjectMeta__c/fields/dupcheck__isFieldMeta__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__isFieldMeta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field meta data</label>
    <type>Checkbox</type>
</CustomField>