force-app/main/default/objects/dupcheck__dc3ObjectMeta__c/fields/dupcheck__isObjectMeta__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__isObjectMeta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Object meta data</label>
    <type>Checkbox</type>
</CustomField>