force-app/main/default/objects/dupcheck__dc3ObjectMeta__c/fields/dupcheck__key__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__key__c</fullName>
    <label>Object Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>