force-app/main/default/objects/dupcheck__dc3ObjectMeta__c/fields/dupcheck__order__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>