force-app/main/default/objects/dupcheck__dc3ObjectMeta__c/fields/dupcheck__payload__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__payload__c</fullName>
    <label>JSON Object Meta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>