force-app/main/default/objects/dupcheck__dc3ObjectMeta__c/fields/dupcheck__uniqueKey__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__uniqueKey__c</fullName>
    <label>Unique Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>